--- a/healthcare/package.json
+++ b/healthcare/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "ipfs-http-client": "^53.0.1",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0"
+    "react-ipfs-uploader": "^1.3.0",
+    "react-router-dom": "^7.3.0",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
